<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header_bar_navi"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/album_header_bar_height"
        android:background="@color/common_title_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/header_bar_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/title_view_left_back_padding_left"
            android:paddingRight="@dimen/title_view_left_back_padding_right"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_back_02_selector" />

        <TextView
            android:id="@+id/header_bar_album_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50.0dip"
            android:layout_marginRight="50.0dip"
            android:singleLine="true"
            android:text="@string/album_title"
            android:textColor="@color/primary_title_text_color"
            android:textSize="19.0sp" />

        <TextView
            android:id="@+id/header_bar_enter_selection"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip"
            android:singleLine="true"
            android:text="@string/album_enter_select"
            android:textColor="@drawable/title_text_selector"
            android:textSize="17.0sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header_bar_select"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/album_header_bar_height"
        android:background="@color/common_title_bg"
        android:visibility="gone"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/header_bar_leave_selection"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip"
            android:singleLine="true"
            android:text="@string/api_cancel"
            android:textColor="@drawable/title_text_selector"
            android:textSize="17.0sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/header_bar_select_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="1.0dip"
                android:paddingRight="1.0dip"
                android:textColor="#ffe8e8e8"
                android:textSize="18.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8.0dip"
                android:gravity="center"
                android:text="@string/album_photo_select_tip"
                android:textColor="@color/primary_title_text_color"
                android:textSize="19.0sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="8.0dip"
            android:singleLine="true"
            android:text="@string/album_phoot_select_all"
            android:textColor="@drawable/title_text_selector"
            android:textSize="17.0sp" />
    </RelativeLayout>


</LinearLayout>